# docs-genius

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  poetry.toml  pylama.ini  pylintrc  pyproject.toml
.github/: pull_request_template.md
.github/actions/python-poetry-env/: action.yml  action_v1.yml
.github/workflows/: lint.yml  orchestrator.yml  test.yml  tests.yml
qna_folder/agents/application/queries/: agents.py
qna_folder/agents/application/repositories/: __init__.py  agents.py
qna_folder/agents/domain/: __init__.py  value_objects.py
qna_folder/agents/domain/entities/: agent.py  text_code_processor.py
qna_folder/chats/application/queries/: chats.py
qna_folder/chats/application/repositories/: __init__.py  chats.py
qna_folder/chats/application/use_cases/: beginning_chat.py  ending_chat.py
qna_folder/chats/domain/: __init__.py  events.py  value_objects.py
qna_folder/chats/domain/entities/: __init__.py  chats.py
qna_folder/documents/application/repositories/: documents.py  embeddings.py
qna_folder/documents/domain/: value_objects.py
src/docs_genius/: main.py
tests/: test_main.py
